--- a/index.css
+++ b/index.css
@@ -1,12 +1,39 @@
 body {
-  background-color: #2c3e50;
+  background-color: #000000;
+  color: white;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: calc(100vh - 17px);
+}
+
+ul,
+span,
+button,
+input {
+  all: unset;
+}
+
+.toDoContainer {
+  margin-top: 1em;
+  width: 15em;
 }
 
 .btn {
   cursor: pointer;
 }
-body {
-  color: #34495e;
+
+.delBtn {
+  all: unset;
+  position: absolute;
+  right: -1.8em;
+}
+
+.toDoList > li {
+  position: relative;
+  padding: 0.2em 0;
+  word-break: break-word;
 }
 
 .clicked {
@@ -14,7 +41,8 @@ body {
 }
 
 .form,
-.greetings {
+.greetings,
+.todo {
   display: none;
 }
 
@@ -39,4 +67,32 @@ body {
   height: 100%;
   z-index: -1;
   animation: fadeIn 0.5s linear;
+}
+.weather {
+  position: absolute;
+  top: 3%;
+  right: 3%;
+  color: #ffffff;
+  font-style: italic;
+  font-weight: light;
+}
+
+.toDoList {
+  width: 15em;
+}
+
+.todo > input,
+.form > input {
+  all: unset;
+  color: #ffffff;
+  padding: 0.5em;
+  font-size: 0.8em;
+  width: 20em;
+  border-bottom: 1px solid #d7d7d7;
+  text-align: center;
+}
+
+.todo > input::placeholder,
+.form > input::placeholder {
+  color: white;
 }
